
MAINTAINERCLEANFILES = Makefile.in

# SUBDIRS = 

CXXFLAGS = $(AM_CXXFLAGS) $(RTI_CFLAGS) $(GNOME_XML_CFLAGS)

INCLUDES = $(MATIS_INCLUDES) -I$(BOOST_LOCATION)

lib_LTLIBRARIES	= libMATIS.la libMATISRTI.la

# these files must be flagged as extra so that they are known to autoconf
# to be added to the distribution, since they are otherwise not directly
# compiled (they are included by other cpp files)
EXTRA_DIST = \
	Interposer/RTI_13NG/MATIS_LibHookup_HookInit_RTI_13NG.cpp \
	Interposer/RTI_13NG/MATIS_LibHookup_SymbolTable_RTI_13NG.cpp \
	Interposer/RTI_13NG/MATIS_LibHookup_ObtainHooks_RTI_13NG.cpp \
	Interposer/RTI_13NG/MATIS_LibHookup_SymbolTable_w32_funcptrs.cpp \
	Interposer/RTI_13NG/MATIS_LibHookup_SymbolTable_w32_hookenum.cpp \
	Interposer/RTI_13NG/MATIS_LibHookup_SymbolTable_w32_hookstruct.cpp \
	Interposer/RTI_13NG/MATIS_FakeRTIAmbassador.h \
\
	Interposer/RTI_13NG/Action/Execute_RTI_UpdateAttributeValues4.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UpdateAttributeValues3.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RegisterObjectInstance1.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RegisterObjectInstance2.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SendInteraction3.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SendInteraction4.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_CreateFederationExecution.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_JoinFederationExecution.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SubscribeObjectClassAttributes.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DestroyFederationExecution.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_FederateRestoreComplete.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_FederateRestoreNotComplete.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_FederateSaveBegun.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_FederateSaveComplete.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_FederateSaveNotComplete.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RegisterFederationSynchronisationPoint2.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RegisterFederationSynchronisationPoint3.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RequestFederationRestore.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RequestFederationSave1.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RequestFederationSave2.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_ResignFederationExecution.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SynchronisationPointAchieved.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_PublishInteractionClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_PublishObjectClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SubscribeInteractionClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnpublishInteractionClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnpublishObjectClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnsubscribeInteractionClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnsubscribeObjectClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_ChangeAttributeTransportationType.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_ChangeInteractionTransportationType.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DeleteObjectInstance2.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DeleteObjectInstance3.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_LocalDeleteObjectInstance.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RequestClassAttributeValueUpdate.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RequestObjectAttributeValueUpdate.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_AttributeOwnershipAcquisition.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_AttributeOwnershipAcquisitionIfAvailable.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_AttributeOwnershipReleaseResponse.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_CancelAttributeOwnershipAcquisition.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_CancelNegotiatedAttributeOwnershipDivestiture.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_IsAttributeOwnedByFederate.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_NegotiatedAttributeOwnershipDivestiture.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_QueryAttributeOwnership.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnconditionalAttributeOwnershipDivestiture.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_EnableTimeConstrained.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_EnableTimeRegulation.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DisableTimeConstrained.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DisableTimeRegulation.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_EnableAsynchronousDelivery.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DisableAsynchronousDelivery.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_ChangeAttributeOrderType.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_ChangeInteractionOrderType.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_FlushQueueRequest.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_ModifyLookahead.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_NextEventRequest.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_NextEventRequestAvailable.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_QueryFederateTime.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_QueryLbts.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_QueryLookahead.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_QueryMinnexteventtime.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_Retract.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_TimeAdvanceRequest.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_TimeAdvanceRequestAvailable.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_AssociateRegionForUpdates.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_CreateRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DeleteRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_NotifyAboutRegionModification.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RegisterObjectInstanceWithRegionSub1.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RegisterObjectInstanceWithRegion4.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RegisterObjectInstanceWithRegion5.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_RequestClassAttributeValueUpdateWithRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SendInteractionWithRegion4.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SendInteractionWithRegion5.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SubscribeInteractionClassWithRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_SubscribeObjectClassAttributesWithRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnassociateRegionForUpdates.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnsubscribeInteractionClassWithRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_UnsubscribeObjectClassWithRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DisableAttributeRelevanceAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DisableAttributeScopeAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DisableClassRelevanceAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_DisableInteractionRelevanceAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_EnableAttributeRelevanceAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_EnableAttributeScopeAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_EnableClassRelevanceAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_EnableInteractionRelevanceAdvisorySwitch.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetAttributeHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetAttributeName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetAttributeRoutingSpaceHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetDimensionHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetDimensionName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetInteractionClassHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetInteractionClassName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetInteractionRoutingSpaceHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetObjectClass.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetObjectClassHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetObjectClassName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetObjectInstanceHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetObjectInstanceName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetOrderingHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetOrderingName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetParameterHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetParameterName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetRegion.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetRegionToken.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetRoutingSpaceHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetRoutingSpaceName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetTransportationHandle.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_GetTransportationName.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_Tick0.cpp \
	Interposer/RTI_13NG/Action/Execute_RTI_Tick2.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_TimeRegulationEnabled.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_TimeConstrainedEnabled.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_RequestRetraction.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_TimeAdvanceGrant.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AnnounceSynchronisationPoint.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_FederationNotRestored.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_FederationNotSaved.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_FederationRestoreBegun.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_FederationRestored.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_FederationSaved.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_FederationSynchronised.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_InitiateFederateRestore.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_InitiateFederateSave.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_RequestFederationRestoreFailed.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_RequestFederationRestoreSucceeded.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_SynchronisationPointRegistrationFailed.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_SynchronisationPointRegistrationSucceeded.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_StartRegistrationForObjectClass.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_StopRegistrationForObjectClass.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_TurnInteractionsOff.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_TurnInteractionsOn.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AttributesInScope.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AttributesOutOfScope.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_DiscoverObjectInstance.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_ProvideAttributeValueUpdate.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_ReceiveInteraction3.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_ReceiveInteraction5.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_ReflectAttributeValues5.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_ReflectAttributeValues3.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_RemoveObjectInstance2.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_RemoveObjectInstance4.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_TurnUpdatesOffForObjectInstance.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_TurnUpdatesOnForObjectInstance.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AttributeIsNotOwned.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AttributeOwnedByRti.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AttributeOwnershipAcquisitionNotification.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AttributeOwnershipDivestitureNotification.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_AttributeOwnershipUnavailable.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_ConfirmAttributeOwnershipAcquisitionCancellation.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_InformAttributeOwnership.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_RequestAttributeOwnershipAssumption.cpp \
	Interposer/RTI_13NG/Action/Execute_Fed_RequestAttributeOwnershipRelease.cpp \
		\
	Interposer/RTI_13NG/Hook/Fed_announceSynchronizationPoint2.cpp \
	Interposer/RTI_13NG/Hook/Fed_attributeIsNotOwned2.cpp \
	Interposer/RTI_13NG/Hook/Fed_attributeOwnedByRTI2.cpp \
	Interposer/RTI_13NG/Hook/Fed_attributeOwnershipAcquisitionNotification2.cpp \
	Interposer/RTI_13NG/Hook/Fed_attributeOwnershipDivestitureNotification2.cpp \
	Interposer/RTI_13NG/Hook/Fed_attributeOwnershipUnavailable2.cpp \
	Interposer/RTI_13NG/Hook/Fed_attributesInScope2.cpp \
	Interposer/RTI_13NG/Hook/Fed_attributesOutOfScope2.cpp \
	Interposer/RTI_13NG/Hook/Fed_confirmAttributeOwnershipAcquisitionCancellation2.cpp \
	Interposer/RTI_13NG/Hook/Fed_discoverObjectInstance3.cpp \
	Interposer/RTI_13NG/Hook/Fed_federationNotRestored0.cpp \
	Interposer/RTI_13NG/Hook/Fed_federationNotSaved0.cpp \
	Interposer/RTI_13NG/Hook/Fed_federationRestoreBegun0.cpp \
	Interposer/RTI_13NG/Hook/Fed_federationRestored0.cpp \
	Interposer/RTI_13NG/Hook/Fed_federationSaved0.cpp \
	Interposer/RTI_13NG/Hook/Fed_federationSynchronized1.cpp \
	Interposer/RTI_13NG/Hook/Fed_informAttributeOwnership3.cpp \
	Interposer/RTI_13NG/Hook/Fed_initiateFederateRestore2.cpp \
	Interposer/RTI_13NG/Hook/Fed_initiateFederateSave1.cpp \
	Interposer/RTI_13NG/Hook/Fed_provideAttributeValueUpdate2.cpp \
	Interposer/RTI_13NG/Hook/Fed_receiveInteraction3.cpp \
	Interposer/RTI_13NG/Hook/Fed_receiveInteraction5.cpp \
	Interposer/RTI_13NG/Hook/Fed_reflectAttributeValues3.cpp \
	Interposer/RTI_13NG/Hook/Fed_reflectAttributeValues5.cpp \
	Interposer/RTI_13NG/Hook/Fed_removeObjectInstance2.cpp \
	Interposer/RTI_13NG/Hook/Fed_removeObjectInstance4.cpp \
	Interposer/RTI_13NG/Hook/Fed_requestAttributeOwnershipAssumption3.cpp \
	Interposer/RTI_13NG/Hook/Fed_requestAttributeOwnershipRelease3.cpp \
	Interposer/RTI_13NG/Hook/Fed_requestFederationRestoreFailed2.cpp \
	Interposer/RTI_13NG/Hook/Fed_requestFederationRestoreSucceeded1.cpp \
	Interposer/RTI_13NG/Hook/Fed_requestRetraction1.cpp \
	Interposer/RTI_13NG/Hook/Fed_startRegistrationForObjectClass1.cpp \
	Interposer/RTI_13NG/Hook/Fed_stopRegistrationForObjectClass1.cpp \
	Interposer/RTI_13NG/Hook/Fed_synchronizationPointRegistrationFailed1.cpp \
	Interposer/RTI_13NG/Hook/Fed_synchronizationPointRegistrationSucceeded1.cpp \
	Interposer/RTI_13NG/Hook/Fed_timeAdvanceGrant1.cpp \
	Interposer/RTI_13NG/Hook/Fed_timeConstrainedEnabled1.cpp \
	Interposer/RTI_13NG/Hook/Fed_timeRegulationEnabled1.cpp \
	Interposer/RTI_13NG/Hook/Fed_turnInteractionsOff1.cpp \
	Interposer/RTI_13NG/Hook/Fed_turnInteractionsOn1.cpp \
	Interposer/RTI_13NG/Hook/Fed_turnUpdatesOffForObjectInstance2.cpp \
	Interposer/RTI_13NG/Hook/Fed_turnUpdatesOnForObjectInstance2.cpp \
	Interposer/RTI_13NG/Hook/RTI_associateRegionForUpdates3.cpp \
	Interposer/RTI_13NG/Hook/RTI_attributeOwnershipAcquisition3.cpp \
	Interposer/RTI_13NG/Hook/RTI_attributeOwnershipAcquisitionIfAvailable2.cpp \
	Interposer/RTI_13NG/Hook/RTI_attributeOwnershipReleaseResponse2.cpp \
	Interposer/RTI_13NG/Hook/RTI_cancelAttributeOwnershipAcquisition2.cpp \
	Interposer/RTI_13NG/Hook/RTI_cancelNegotiatedAttributeOwnershipDivestiture2.cpp \
	Interposer/RTI_13NG/Hook/RTI_changeAttributeOrderType3.cpp \
	Interposer/RTI_13NG/Hook/RTI_changeAttributeTransportationType3.cpp \
	Interposer/RTI_13NG/Hook/RTI_changeInteractionOrderType2.cpp \
	Interposer/RTI_13NG/Hook/RTI_changeInteractionTransportationType2.cpp \
	Interposer/RTI_13NG/Hook/RTI_createFederationExecution2.cpp \
	Interposer/RTI_13NG/Hook/RTI_createRegion2.cpp \
	Interposer/RTI_13NG/Hook/RTI_deleteObjectInstance2.cpp \
	Interposer/RTI_13NG/Hook/RTI_deleteObjectInstance3.cpp \
	Interposer/RTI_13NG/Hook/RTI_deleteRegion1.cpp \
	Interposer/RTI_13NG/Hook/RTI_destroyFederationExecution1.cpp \
	Interposer/RTI_13NG/Hook/RTI_disableAsynchronousDelivery0.cpp \
	Interposer/RTI_13NG/Hook/RTI_disableAttributeRelevanceAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_disableAttributeScopeAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_disableClassRelevanceAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_disableInteractionRelevanceAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_disableTimeConstrained0.cpp \
	Interposer/RTI_13NG/Hook/RTI_disableTimeRegulation0.cpp \
	Interposer/RTI_13NG/Hook/RTI_enableAsynchronousDelivery0.cpp \
	Interposer/RTI_13NG/Hook/RTI_enableAttributeRelevanceAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_enableAttributeScopeAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_enableClassRelevanceAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_enableInteractionRelevanceAdvisorySwitch0.cpp \
	Interposer/RTI_13NG/Hook/RTI_enableTimeConstrained0.cpp \
	Interposer/RTI_13NG/Hook/RTI_enableTimeRegulation2.cpp \
	Interposer/RTI_13NG/Hook/RTI_federateRestoreComplete0.cpp \
	Interposer/RTI_13NG/Hook/RTI_federateRestoreNotComplete0.cpp \
	Interposer/RTI_13NG/Hook/RTI_federateSaveBegun0.cpp \
	Interposer/RTI_13NG/Hook/RTI_federateSaveComplete0.cpp \
	Interposer/RTI_13NG/Hook/RTI_federateSaveNotComplete0.cpp \
	Interposer/RTI_13NG/Hook/RTI_flushQueueRequest1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getAttributeHandle2.cpp \
	Interposer/RTI_13NG/Hook/RTI_getAttributeName2.cpp \
	Interposer/RTI_13NG/Hook/RTI_getAttributeRoutingSpaceHandle2.cpp \
	Interposer/RTI_13NG/Hook/RTI_getDimensionHandle2.cpp \
	Interposer/RTI_13NG/Hook/RTI_getDimensionName2.cpp \
	Interposer/RTI_13NG/Hook/RTI_getInteractionClassHandle1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getInteractionClassName1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getInteractionRoutingSpaceHandle1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getObjectClass1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getObjectClassHandle1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getObjectClassName1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getObjectInstanceHandle1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getObjectInstanceName1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getOrderingHandle1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getOrderingName1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getParameterHandle2.cpp \
	Interposer/RTI_13NG/Hook/RTI_getParameterName2.cpp \
	Interposer/RTI_13NG/Hook/RTI_getRegion1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getRegionToken1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getRoutingSpaceHandle1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getRoutingSpaceName1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getTransportationHandle1.cpp \
	Interposer/RTI_13NG/Hook/RTI_getTransportationName1.cpp \
	Interposer/RTI_13NG/Hook/RTI_isAttributeOwnedByFederate2.cpp \
	Interposer/RTI_13NG/Hook/RTI_joinFederationExecution3.cpp \
	Interposer/RTI_13NG/Hook/RTI_localDeleteObjectInstance1.cpp \
	Interposer/RTI_13NG/Hook/RTI_modifyLookahead1.cpp \
	Interposer/RTI_13NG/Hook/RTI_negotiatedAttributeOwnershipDivestiture3.cpp \
	Interposer/RTI_13NG/Hook/RTI_nextEventRequest1.cpp \
	Interposer/RTI_13NG/Hook/RTI_nextEventRequestAvailable1.cpp \
	Interposer/RTI_13NG/Hook/RTI_notifyAboutRegionModification1.cpp \
	Interposer/RTI_13NG/Hook/RTI_publishInteractionClass1.cpp \
	Interposer/RTI_13NG/Hook/RTI_publishObjectClass2.cpp \
	Interposer/RTI_13NG/Hook/RTI_queryAttributeOwnership2.cpp \
	Interposer/RTI_13NG/Hook/RTI_queryFederateTime1.cpp \
	Interposer/RTI_13NG/Hook/RTI_queryLBTS1.cpp \
	Interposer/RTI_13NG/Hook/RTI_queryLookahead1.cpp \
	Interposer/RTI_13NG/Hook/RTI_queryMinNextEventTime1.cpp \
	Interposer/RTI_13NG/Hook/RTI_registerFederationSynchronizationPoint2.cpp \
	Interposer/RTI_13NG/Hook/RTI_registerFederationSynchronizationPoint3.cpp \
	Interposer/RTI_13NG/Hook/RTI_registerObjectInstance1.cpp \
	Interposer/RTI_13NG/Hook/RTI_registerObjectInstance2.cpp \
	Interposer/RTI_13NG/Hook/RTI_registerObjectInstanceWithRegion4.cpp \
	Interposer/RTI_13NG/Hook/RTI_registerObjectInstanceWithRegion5.cpp \
	Interposer/RTI_13NG/Hook/RTI_requestClassAttributeValueUpdate2.cpp \
	Interposer/RTI_13NG/Hook/RTI_requestClassAttributeValueUpdateWithRegion3.cpp \
	Interposer/RTI_13NG/Hook/RTI_requestFederationRestore1.cpp \
	Interposer/RTI_13NG/Hook/RTI_requestFederationSave1.cpp \
	Interposer/RTI_13NG/Hook/RTI_requestFederationSave2.cpp \
	Interposer/RTI_13NG/Hook/RTI_requestObjectAttributeValueUpdate2.cpp \
	Interposer/RTI_13NG/Hook/RTI_resignFederationExecution1.cpp \
	Interposer/RTI_13NG/Hook/RTI_retract1.cpp \
	Interposer/RTI_13NG/Hook/RTI_sendInteraction3.cpp \
	Interposer/RTI_13NG/Hook/RTI_sendInteraction4.cpp \
	Interposer/RTI_13NG/Hook/RTI_sendInteractionWithRegion4.cpp \
	Interposer/RTI_13NG/Hook/RTI_sendInteractionWithRegion5.cpp \
	Interposer/RTI_13NG/Hook/RTI_subscribeInteractionClass2.cpp \
	Interposer/RTI_13NG/Hook/RTI_subscribeInteractionClassWithRegion3.cpp \
	Interposer/RTI_13NG/Hook/RTI_subscribeObjectClassAttributes3.cpp \
	Interposer/RTI_13NG/Hook/RTI_subscribeObjectClassAttributesWithRegion4.cpp \
	Interposer/RTI_13NG/Hook/RTI_synchronizationPointAchieved1.cpp \
	Interposer/RTI_13NG/Hook/RTI_tick0.cpp \
	Interposer/RTI_13NG/Hook/RTI_tick2.cpp \
	Interposer/RTI_13NG/Hook/RTI_timeAdvanceRequest1.cpp \
	Interposer/RTI_13NG/Hook/RTI_timeAdvanceRequestAvailable1.cpp \
	Interposer/RTI_13NG/Hook/RTI_unassociateRegionForUpdates2.cpp \
	Interposer/RTI_13NG/Hook/RTI_unconditionalAttributeOwnershipDivestiture2.cpp \
	Interposer/RTI_13NG/Hook/RTI_unpublishInteractionClass1.cpp \
	Interposer/RTI_13NG/Hook/RTI_unpublishObjectClass1.cpp \
	Interposer/RTI_13NG/Hook/RTI_unsubscribeInteractionClass1.cpp \
	Interposer/RTI_13NG/Hook/RTI_unsubscribeInteractionClassWithRegion2.cpp \
	Interposer/RTI_13NG/Hook/RTI_unsubscribeObjectClass1.cpp \
	Interposer/RTI_13NG/Hook/RTI_unsubscribeObjectClassWithRegion2.cpp \
	Interposer/RTI_13NG/Hook/RTI_updateAttributeValues3.cpp \
	Interposer/RTI_13NG/Hook/RTI_updateAttributeValues4.cpp \
	Model/MATIS_LEAPBMModel.cpp \
	Model/MATIS_LEAPBMModel.h

libMATIS_la_SOURCES = \
	Model/LEAPBM/LAE/MATIS_LAESet.h \
	Model/LEAPBM/LAE/MATIS_LAESetConvenienceMethods.h \
	Model/LEAPBM/LAE/MATIS_LAEClass.h \
	Model/LEAPBM/LAE/MATIS_LAEMethod.h \
	Model/LEAPBM/LAE/MATIS_LAEUnrestricted.h \
	Model/LEAPBM/LAE/MATIS_LAEMethodStage.h \
	Model/LEAPBM/LAE/MATIS_LAEMethodStageProgression.h \
	Model/LEAPBM/LAE/MATIS_LAEProperty.h \
	Model/LEAPBM/LAE/MATIS_LAETrigger.h \
	Model/LEAPBM/LAE/MATIS_LAEChecker.h \
	Model/LEAPBM/LAE/MATIS_LAEFunction.h \
	Model/LEAPBM/LAE/MATIS_LAEPolicy.h \
	Model/LEAPBM/LAE/MATIS_LAEPropertyReference.h \
	Model/LEAPBM/LAE/MATIS_LAEPropertySource.h \
	Model/LEAPBM/LAE/MATIS_LAEValueGroup.h \
	Model/LEAPBM/LAE/MATIS_LAERequirement.h \
	Model/LEAPBM/LAE/MATIS_LAEValueType.h \
	Model/LEAPBM/LAE/MATIS_APIGroup.h \
	Model/LEAPBM/LAE/MATIS_APIMethod.h \
	Model/LEAPBM/LAE/MATIS_APIParameter.h \
	Model/LEAPBM/LAE/MATIS_APIReturn.h \
	Model/LEAPBM/LAE/MATIS_APIException.h \
	Model/LEAPBM/LAE/MATIS_APIVariable.h \
	Model/LEAPBM/MATIS_LEAPBM.h \
	Model/LEAPBM/MATIS_LEAPBMConvenienceMethods.h \
	Model/LEAPBM/MATIS_LEAPBMEntry.h \
	Model/LEAPBM/MATIS_LEAPBMException.h \
	Model/LEAPBM/MATIS_LEAPBMExit.h \
	Model/LEAPBM/MATIS_LEAPBMGroup.h \
	Model/LEAPBM/MATIS_LEAPBMLAE.h \
	Model/LEAPBM/MATIS_LEAPBMLAEInteraction.h \
	Model/LEAPBM/MATIS_LEAPBMLAETerm.h \
	Model/LEAPBM/MATIS_LEAPBMMethodCall.h \
	Model/LEAPBM/MATIS_LEAPBMPathway.h \
	Model/LEAPBM/MATIS_LEAPBMProcess.h \
	Model/LEAPBM/MATIS_LEAPBMFile.h \
	Model/LEAPBM/MATIS_LEAPBMHost.h \
	Model/LEAPBM/MATIS_LEAPBMMethod.h \
	Model/LEAPBM/MATIS_LEAPBMPropertySet.h \
	Model/LEAPBM/MATIS_LEAPBMUnordered.h \
	Model/LEAPBM/MATIS_LEAPBMValueReference.h \
	Model/LEAPBM/MATIS_LEAPBMGroupIterator.h \
	Model/LEAPBM/MATIS_LEAPBMIterator.h \
	Model/MATIS_UniqueHandleFactory.h \
	Model/MATIS_Action.h \
	Model/MATIS_Model.h \
	Model/MATIS_ModelIterator.h \
	Model/MATIS_Hashable.h \
	Model/MATIS_ModelElement.h \
	Support/MATIS_Types.h \
	Support/MATIS_TypesConvenienceMethods.h \
	Support/cistring.h \
	Support/rdtscTimer.h \
	Support/MATIS_Macros.h \
	Support/MATIS_MessageLogger.h \
	Support/MATIS_ConfigurationElement.h \
	Support/MATIS_ConfigurationStore.h \
	Support/MATIS_XMLStore.h \
	Support/MATIS_Checker.h \
	Support/MATIS_Function.h \
	Support/dlc.cpp \
	Model/LEAPBM/LAE/MATIS_LAESet.cpp \
	Model/LEAPBM/LAE/MATIS_LAEClass.cpp \
	Model/LEAPBM/LAE/MATIS_LAEMethod.cpp \
	Model/LEAPBM/LAE/MATIS_LAEUnrestricted.cpp \
	Model/LEAPBM/LAE/MATIS_LAEMethodStage.cpp \
	Model/LEAPBM/LAE/MATIS_LAEMethodStageProgression.cpp \
	Model/LEAPBM/LAE/MATIS_LAEProperty.cpp \
	Model/LEAPBM/LAE/MATIS_LAETrigger.cpp \
	Model/LEAPBM/LAE/MATIS_LAEChecker.cpp \
	Model/LEAPBM/LAE/MATIS_LAEFunction.cpp \
	Model/LEAPBM/LAE/MATIS_LAEPolicy.cpp \
	Model/LEAPBM/LAE/MATIS_LAEPropertyReference.cpp \
	Model/LEAPBM/LAE/MATIS_LAEPropertySource.cpp \
	Model/LEAPBM/LAE/MATIS_LAEValueGroup.cpp \
	Model/LEAPBM/LAE/MATIS_LAERequirement.cpp \
	Model/LEAPBM/LAE/MATIS_LAEValueType.cpp \
	Model/LEAPBM/LAE/MATIS_APIGroup.cpp \
	Model/LEAPBM/LAE/MATIS_APIMethod.cpp \
	Model/LEAPBM/LAE/MATIS_APIParameter.cpp \
	Model/LEAPBM/LAE/MATIS_APIReturn.cpp \
	Model/LEAPBM/LAE/MATIS_APIException.cpp \
	Model/LEAPBM/LAE/MATIS_APIVariable.cpp \
	Model/LEAPBM/MATIS_LEAPBM.cpp \
	Model/LEAPBM/MATIS_LEAPBMEntry.cpp \
	Model/LEAPBM/MATIS_LEAPBMException.cpp \
	Model/LEAPBM/MATIS_LEAPBMExit.cpp \
	Model/LEAPBM/MATIS_LEAPBMGroup.cpp \
	Model/LEAPBM/MATIS_LEAPBMLAE.cpp \
	Model/LEAPBM/MATIS_LEAPBMLAEInteraction.cpp \
	Model/LEAPBM/MATIS_LEAPBMLAETerm.cpp \
	Model/LEAPBM/MATIS_LEAPBMMethodCall.cpp \
	Model/LEAPBM/MATIS_LEAPBMPathway.cpp \
	Model/LEAPBM/MATIS_LEAPBMProcess.cpp \
	Model/LEAPBM/MATIS_LEAPBMFile.cpp \
	Model/LEAPBM/MATIS_LEAPBMHost.cpp \
	Model/LEAPBM/MATIS_LEAPBMMethod.cpp \
	Model/LEAPBM/MATIS_LEAPBMPropertySet.cpp \
	Model/LEAPBM/MATIS_LEAPBMUnordered.cpp \
	Model/LEAPBM/MATIS_LEAPBMValueReference.cpp \
	Model/LEAPBM/MATIS_LEAPBMGroupIterator.cpp \
	Model/LEAPBM/MATIS_LEAPBMIterator.cpp \
	Model/MATIS_UniqueHandleFactory.cpp \
	Model/MATIS_Action.cpp \
	Model/MATIS_Model.cpp \
	Model/MATIS_ModelIterator.cpp \
	Support/dlc_base.h \
	Support/dlc_maker_base.h \
	Support/dlc_register.h \
	Support/dlc_server.h \
	Support/MATIS_MessageLogger.cpp \
	Support/MATIS_ConfigurationElement.cpp \
	Support/MATIS_ConfigurationStore.cpp \
	Support/MATIS_XMLStore.cpp \
	Support/MATIS_Checker.cpp \
	Support/MATIS_Function.cpp 



#Support/MATIS_VecHash.h \
#Support/MATIS_Comparators.h \
#Support/MATIS_VecHash.cpp \
# note: all plugins to be used built-in must be at top of list
libMATISRTI_la_SOURCES = \
	Support/RTI_13NG/MATIS_CheckerHandleSet.cpp \
	Support/RTI_13NG/MATIS_CheckerHandleSet.h \
	Support/RTI_13NG/MATIS_CheckerHandleValuePairSet.cpp \
	Support/RTI_13NG/MATIS_CheckerHandleValuePairSet.h \
	Support/RTI_13NG/MATIS_CheckerFedTime.cpp \
	Support/RTI_13NG/MATIS_CheckerFedTime.h \
	Support/RTI_13NG/MATIS_CheckerRegion.cpp \
	Support/RTI_13NG/MATIS_CheckerRegion.h \
	Support/RTI_13NG/MATIS_CheckerBoolean.cpp \
	Support/RTI_13NG/MATIS_CheckerBoolean.h \
	Support/RTI_13NG/MATIS_CheckerObjectClassName.cpp \
	Support/RTI_13NG/MATIS_CheckerObjectClassName.h \
	Support/RTI_13NG/MATIS_CheckerInteractionClassName.cpp \
	Support/RTI_13NG/MATIS_CheckerInteractionClassName.h \
	Support/RTI_13NG/MATIS_FunctionExistsInRTIHandleSet.cpp \
	Support/RTI_13NG/MATIS_FunctionExistsInRTIHandleSet.h \
	Interposer/MATIS_LibHookup.cpp \
	Interposer/MATIS_LibHookup.h \
	Support/MATIS_TypeConversion.cpp \
	Support/MATIS_Plugin.h \
	Support/MATIS_Plugin.cpp \
	Support/MATIS_PluginRef.h \
	Support/MATIS_PluginRef.cpp \
	Support/MATIS_PluginStore.h \
	Support/MATIS_PluginStore.cpp \
	Interposer/RTI_13NG/MATIS_RTIAmbassador.cpp \
	Interposer/RTI_13NG/MATIS_FederateAmbassador.cpp \
	Support/RTI_13NG/MATIS_TypeConversion_RTI_13NG.cpp \
	Interposer/RTI_13NG/MATIS_Action_RTI_13NG.cpp \
	Interposer/RTI_13NG/MATIS_ActionUtil_RTI_13NG.cpp \
	Interposer/RTI_13NG/MATIS_Model_RTI_13NG.cpp \
	Interposer/RTI_13NG/MATIS_Channel_RTI_13NG.cpp \
	Support/MATIS_TypeConversion.h \
	Interposer/RTI_13NG/MATIS_RTIAmbassador.h \
	Interposer/RTI_13NG/MATIS_FederateAmbassador.h \
	Support/RTI_13NG/MATIS_TypeConversion_RTI_13NG.h \
	Interposer/RTI_13NG/MATIS_Action_RTI_13NG.h \
	Interposer/RTI_13NG/MATIS_Model_RTI_13NG.h \
	Interposer/RTI_13NG/MATIS_Channel_RTI_13NG.h \
	Interposer/RTI_13NG/MATIS_Hook_RTI_13NG.h \
	Interposer/RTI_13NG/MATIS_Action_Return_RTI_13NG.h \
	Model/MATIS_Channel.h \
	Model/MATIS_Channel.cpp


#	\ #RTI_13NG specific cpp files
#	\ #RTI_13NG specific header files

libMATIS_la_LIBADD        = @LIBS@  -lltdl \
	 $(GNOME_XML_LIB)

# gnomey/libMATISLoggerClient.la 

libMATIS_la_LDFLAGS	= -export-dynamic -version-info $(LIBMATIS_SO_VERSION)
libMATIS_la_CXXFLAGS = -DMATIS_COMPILE $(AM_CXXFLAGS) 

libMATISRTI_la_LIBADD        = libMATIS.la $(RTI_LIBS)
libMATISRTI_la_LDFLAGS	= -export-dynamic -version-info $(LIBMATISRTI_SO_VERSION)
libMATISRTI_la_CXXFLAGS = -DMATIS_COMPILE $(AM_CXXFLAGS) 

#plugindir = $(pkgdatadir)/plugins

#plugin_LTLIBRARIES = \
#
